tests/snapshots/runtime_error_fixtures/division_by_zero_int.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/division_by_zero_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
[12 of 12] Compiling  division_by_zero_int
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/division_by_zero_int.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/division_by_zero_int.flx:2:19
  |
2 |     let ignored = 42 / 0
  |                   ^^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at main (examples/runtime_errors/division_by_zero_int.flx:2:19)
  at <main>
